frontend/test/should_fail/computations_decl_use_returns_type_mismatch_006.grg
using model_init;

proc(var d:double) : (int)
{
	return(d);
}

